--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,12 @@
         "php": "^7.1",
         "ext-curl": "*",
         "ext-json": "*",
-        "sierratecnologia/pedreiro": "dev-master",
+        "laravel/passport": "^10.0",
+        "laravel/socialite": "^5.0",
+        "ricardosierra/validate": "dev-master",
+        "sierratecnologia/crypto": "dev-master",
         "sierratecnologia/muleta": "dev-master",
-        "sierratecnologia/crypto": "dev-master"
+        "sierratecnologia/pedreiro": "dev-master"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
