--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
         "ext-json": "*",
         "laravel/passport": "^10.0",
         "laravel/socialite": "^5.0",
-        "ricardosierra/validate": "dev-master",
-        "sierratecnologia/crypto": "dev-master",
-        "sierratecnologia/muleta": "dev-master",
-        "sierratecnologia/pedreiro": "dev-master"
+        "ricardosierra/validate": "^0.4.0",
+        "sierratecnologia/crypto": "^0.4.0",
+        "sierratecnologia/muleta": "^0.4.0",
+        "sierratecnologia/pedreiro": "^0.4.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
