--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "ext-json": "*",
         "laravel/passport": "^10.0",
         "laravel/socialite": "^5.0",
+        "creativeorange/gravatar": "^1.0",
         "ricardosierra/laravel-haml": "^2.4",
         "ricardosierra/validate": "dev-master",
         "sierratecnologia/crypto": "dev-master",
